connected with the remotely hosted website

--- a/Devops-frontend/.env
+++ b/Devops-frontend/.env
@@ -1,4 +1,4 @@
-VITE_APP_BACKEND_URL=http://localhost:3000/api/v1
+VITE_APP_BACKEND_URL=cognitive-colleen-pratham1320-4c201b09.koyeb.app/
 VITE_APP_FIREBASE_API_KEY= AIzaSyCEv-dtvmxfqxb1FP_SnkTZUUiyWHWVtbs
 VITE_APP_FIREBASE_AUTH_DOMAIN = gatherhub-b82f6.firebaseapp.com
 VITE_APP_FIREBASE_PROJECT_ID = gatherhub-b82f6
